<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Consistency-based Algorithms for Conflict Detection and Resolution
  ~
  ~ Copyright (c) 2022
  ~
  ~ @author: Viet-Man Le (vietman.le@ist.tugraz.at)
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>at.tugraz.ist.ase</groupId>
    <artifactId>ca-cdr-v2-root</artifactId>
    <packaging>pom</packaging>
    <version>1.3.9-alpha-42</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <modules>
        <module>common-package</module>
        <module>csp2choco-package</module>
        <module>fm-package</module>
        <module>eval-package</module>
        <module>chocokb-package</module>
        <module>cdrmodel-package</module>
        <module>ca-cdr-package</module>
    </modules>

    <profiles>
        <profile>
            <id>apps</id>
            <modules>
                <module>app-KBStatistics</module>
                <module>app-FMGenerator</module>
            </modules>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.2.11</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.0</version>
            </plugin>
        </plugins>
    </build>

    <developers>
        <developer>
            <id>manleviet</id>
            <name>Viet-Man Le</name>
            <email>vietman.le@ist.tugraz.at</email>
            <url>https://github.com/manleviet</url>
        </developer>
    </developers>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>CACDR-V2</name>
            <url>https://maven.pkg.github.com/manleviet/CA-CDR-V2</url>
        </repository>
    </distributionManagement>

</project>